fix pull down to reload on mobile

--- a/conreq/core/base/static/css/main_slim.css
+++ b/conreq/core/base/static/css/main_slim.css
@@ -16,7 +16,6 @@ body,
 	margin: 0px;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-	overflow: hidden;
 }
 
 .main {
