--- a/conreq/core/home/static/css/main.css
+++ b/conreq/core/home/static/css/main.css
@@ -52,7 +52,6 @@ html {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	height: 100%;
-	overflow: hidden;
 	font-family: var(--global-font);
 	scroll-behavior: smooth;
 	background: #363636;
@@ -66,7 +65,6 @@ body {
 	box-sizing: content-box;
 	position: relative;
 	line-height: 1;
-	overflow: hidden;
 	width: 100%;
 	height: 100%;
 	z-index: 9999;
